--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.1.1",
+    "react-bootstrap-table": "^4.1.4",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-promise": "^2.0.0",
+    "react-scripts": "1.0.17",
+    "save": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
